添加Workflow的Dto和生成系统
